--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,7 +16,7 @@
   {{ $site_author := or site.Author.name site.Params.name site.Title }}
   <!---->
   {{ if eq .Kind "page" }}
-  <meta name="description" content="{{ .Summary }}" />
+  <meta name="description" content="Hi there! I am Amar Murmu, and I am a Graphic designer, Web developer & 3D artist with over 2 years of experience. I have a Diploma's degree in Computer Science and Engineering from Silli Polytechnic, Ranchi." />
   <meta name="author" content="{{ or .Params.author $site_author }}" />
   {{ else }}
   <!---->
